@@ -6,11 +6,11 @@
     <description>Appcast for Swish updates.</description>
     <language>en</language>
     <item>
-      <title>Version 0.6.0</title>
-      <sparkle:releaseNotesLink>http://www.swish-sftp.org/autoupdate/NEWS-0.6.0.html</sparkle:releaseNotesLink>
-      <pubDate>09 Sep 2011</pubDate>
-      <enclosure url="http://sourceforge.net/projects/swish/files/swish/swish-0.6.0/swish-0.6.0.exe/download"
-                 sparkle:version="0.6.0"
+      <title>Version 0.6.1</title>
+      <sparkle:releaseNotesLink>http://www.swish-sftp.org/autoupdate/NEWS-0.6.1.html</sparkle:releaseNotesLink>
+      <pubDate>30 April 2012</pubDate>
+      <enclosure url="http://sourceforge.net/projects/swish/files/swish/swish-0.6.1/swish-0.6.1.exe/download"
+                 sparkle:version="0.6.1"
                  type="application/octet-stream"/>
     </item>
   </channel>
